[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
[project]
name = "goalEDP"
version = "0.0.9"
dependencies = ["flask[async]", "flask", "nest_asyncio", "uuid", "deepdiff"]
keywords = ["scientific", "paradigms", "agents", "explainability"]
authors = [
  { name="Henrique Emanoel Viana", email="hv5088@gmail.com" },
]
description = "Library for processing goal-oriented agents. Processing is done on an event-driven mechanism. Events are saved to be used by explanation generating methods."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]
[tool.setuptools]
include-package-data = true
[project.urls]
"Homepage" = "https://github.com/hviana/goalEDP"